started adding role based access control and added tests for that